# Ulimisana_Optimisation_Algorithm

./: README.md  Ulimisana Package Examples.ipynb  long_description.rst  pyproject.toml  setup.cfg
ulimisana/: agent_positions.py  example_local_folder.py  testFunctions.py  transformFunctions.py  trustworthinessFunction.py  ubuntuIncentives.py  ulimisana.py  visualisation.py
